Fix blur overflow

--- a/css/cocktails.css
+++ b/css/cocktails.css
@@ -335,6 +335,7 @@ Modal
 
 .blur {
    filter: blur(1px);
+   overflow: hidden;
 }
 
 #modal {
